plugins {
    id 'fabric-loom' version '1.11.7'
    id 'maven-publish'
}
version = project.mod_version
group = project.maven_group
archivesBaseName = project.archives_base_name
repositories {
    maven { url = 'https://maven.fabricmc.net/' }
    mavenCentral()
}
dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
}
loom {
    splitEnvironmentSourceSets()
    runs {
        client {
            vmArgs "-Djava.awt.headless=false", "--enable-native-access=ALL-UNNAMED"
        }
    }
}
java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    withSourcesJar()
}
tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.release = 21
}
tasks.named("processResources") {
    inputs.property "version", project.version
    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {
        mavenLocal()
    }
}
